# glossy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.skills/glassdash-component-development/: SKILL.md
.skills/glassdash-issue-pr-workflow/: SKILL.md
.skills/glassdash-validation-debugging/: SKILL.md
assets/: glass.css
docs/superpowers/plans/: 2026-04-13-glassdash-implementation.md  2026-04-14-glassdash-library-implementation.md  2026-04-17-sidebar-navigation-implementation.md
docs/superpowers/specs/: 2026-04-13-glassdash-design.md  2026-04-14-glassdash-library-design.md  2026-04-17-sidebar-navigation-design.md
glassdash/: __init__.py  _version.py  dashboard.py  theme.py  utils.py
glassdash/assets/: glass.css
glassdash/components/: __init__.py  _base.py  _chart_helpers.py  _validation.py  area_chart.py  bar_chart.py  charts_group.py  dual_area.py  glass_card.py  kpi_card.py  line_chart.py  multi_area.py  multi_bars.py  multi_lines.py  radial_gauge.py  stacked_bar.py  stacked_bar_breakdown.py  stacked_bar_horizontal.py  stacked_bar_line.py
glassdash/demo/: __init__.py  app.py
glassdash/demo/pages/: finance.py  sales.py  workforce.py
scripts/: pre-commit
tests/: conftest.py  test_components.py  test_validation.py
