[project]
name = "glassdash"
version = "0.1.0"
description = "Beautiful glassmorphism dashboards for Plotly Dash + Polars"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Stephen Sun", email = "stephen@example.com" }
]
dependencies = [
    "dash>=2.0",
    "polars>=0.19",
    "plotly>=5.0",
    "pandera>=0.19",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/suntianxun/glossy"
Repository = "https://github.com/suntianxun/glossy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["glassdash"]

[tool.hatch.build.targets.wheel.data]
include = ["glassdash/assets"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
